<resources>
    <string name="app_name">clothshop</string>
    <!--    <string name="title_activity_login">LoginActivity</string>-->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <!--    <string name="hint_name">Fullname</string>-->
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="email1">Email address: <font fgcolor="red">*</font></string>
    <string name="fname">Full name: <font fgcolor="red">*</font></string>
    <string name="password">Password (between 6 and 20 chars): <font fgcolor="red">*</font></string>
    <string name="cpwd">Confirm password: <font fgcolor="red">*</font></string>
    <string name="mphone">Mobile Phone <font fgcolor="red">*</font></string>
    <string name="a2">Address 2 (Area Location): <font fgcolor="red">*</font></string>
    <string name="a3">Address 3 (City Name): <font fgcolor="red">*</font></string>
    <string name="agree">I have read and agree to terms of use. <font fgcolor="red">*</font></string>
    <string name="a"><font fgcolor="red">*</font></string>
    <string name="todo">TODO</string>


    <!--    <string-array name="seller">-->
    <!--        <item>Add products</item>-->
    <!--        <item>Show my products</item>-->
    <!--        <item>Delete my products</item>-->


    <!--    </string-array>-->


    <!--    for adding products-->

    <string name="pName">Product Name: <font fgcolor="red">*</font></string>
    <string name="pPrice">Product Price: <font fgcolor="red">*</font></string>
    <string name="pCondition">Product Condition: <font fgcolor="red">*</font></string>
    <string name="pDescription">Product Description: <font fgcolor="red">*</font></string>
    <string name="pCategory">Category <font fgcolor="red">*</font></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
