<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/loginimg" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusable="true"
        app:passwordToggleEnabled="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24" />
    </com.google.android.material.textfield.TextInputLayout>




    <!-- Login Button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="#F44336"
        android:text="@string/btn_login"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="#F44336" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"
        android:textSize="15dp" />

</LinearLayout>